# autogen-api

./: .gitignore  Cargo.toml  README.md  build.rs  seed_db.sql
app/: build.rs  cargo.toml  db.db  init.sh  main.rs
app/src/: main.rs  models.rs
app/tests/: app.rs
autogen_macros/: Cargo.toml
autogen_macros/src/: controllers.rs  lib.rs
macros/: Cargo.toml
macros/src/: controllers.rs  lib.rs
src/: main.rs  models.rs
