[package]
name = "autogen-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["macros"]

[dependencies]
axum = "0.7.4"
chrono = "0.4.34"
sqlparser = "0.43.1"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
sqlparser = "0.43.1"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
