[workspace.package]
name = "autogen-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["autogen_macros", "app"]

resolver = "2"

[workspace.dependencies]
autogen_macros = { version = "0.1.0", path = "./autogen_macros" }
axum = "0.7.4"
chrono = "0.4.34"
serde = "1.0.197"
sqlparser = "0.43.1"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
